--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./appPic.jpg" />
   </head>
   <body>
-    <h1>Rock Paper & Scisscors!</h1>
+    <h1>Rock Paper & Scisscors! <span class="reset">New Match</span></h1>
     <div class="choices">
       <div class="choice" id="rock"><img src="./rock_39413.png" alt="rock" /><p>ROCK</p></div>
       <div class="choice" id="paper">
@@ -29,8 +29,7 @@
         </div>
     </div>
     <div class="mess">Play!</div>
-    <br>
-    <div class="reset">New Match</div>
+    <!-- <br> -->
   </body>
   <script src="./logicPage.js"></script>
 </html>
