--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./appPic.jpg" />
   </head>
   <body>
-    <h1>Rock Paper & Scisscors! <span class="reset">New Match</span></h1>
+    <h1>Rock Paper & Scisscors! <span class="reset">New<span style="color: rgb(96, 147, 159);">_</span>Match</span></h1>
     <div class="choices">
       <div class="choice" id="rock"><img src="./rock_39413.png" alt="rock" /><p>ROCK</p></div>
       <div class="choice" id="paper">
